2005-12-22 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m:
	- Upgraded the whole program to exploit the new 'matrix output' feature of load_laser_tracking.
	- corrected the positioning of overlayed magnets, so that they are reliably visible
	- added 7th field in the global master database: 'drift' and removed the field: 'experType'
	- Added  ability to select 'drift section' and then remove that drift from rest of the data
	- Improved interface for drawing and dragging box, now using radios and buttonDownFcns
	- Changed the 'cut' behavior to 'remove inside box' instead of 'remove outside box'
	- Now in the 3D plot the data inside box has different color than data outside box.
	- Several miscellaneous fixes of typos and bugs.
	* lt_anlaysis_gui.fig: same

2005-12-20 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m: 
	- Added  3d plotting ability
	- Added ability to overlay channel 8 (wire from magnet DAC) onto position traces.
	- Added calculation and display of raw peak to peak measurement inside box.
	- Improved default positioning of 'results' window
	- Fixed a typo in the calcualtion of radial displacement.
	* lt_anlaysis_gui.fig: same
2005-12-19 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m: The new and more appropriate name for the old file FreqSweepAnalysis.m. 
	- Competely renovated, now targetted for interactive analysis of a much broader range of experiments. 
	- Frequency Sweep analysis is still disabled.
	* lt_analysis_gui.fig: same.
2005-11-30 Kalpit Desai <kvdesai@email.unc.edu>
	* FreqSweepAnalysis.m, freqSweepAnalysis.fig: Several new features e.g. plotting 3d trace, XYZ time series etc.
2005-11-15 Kalpit Desai <kvdesai@email.unc.edu>
	* FreqSweepAnalysis.m: Several new features e.g. calculating and ploting cumulative displacement upto certain frequency, plotting for stage etc. 
	* FreqSweepAnalysis.fig: Couple of relevant checkboxes

2005-10-18 Kalpit Desai <kvdesai@email.unc.edu>